# platonic.tools

./: CONTRIBUTING.md  Makefile  README.md  main.py  mkdocs.yml  netlify.toml  pyproject.toml  serialize_casts_to_yaml.py  setup.cfg
docs/: context.yaml  index.md  typecasts.md
docs/_generated/custom-types/: test_inheritance.py
docs/backends/: index.md  sqs.md
docs/backends/sqs/: acknowledge.md  index.md  receive.md
docs/backends/sqs/receiver/: acknowledge.md  index.md
docs/backends/sqs/sender/: send.md  send_many.md
docs/decisions/: 001-timeout-vs-blocking.md  002-sqs-batch-size.md  index.md
docs/implementations/: index.md  table.html
docs/implementations/platonic-sqs-queue/: index.md
docs/implementations/platonic-sqs-queue/receiver/: permissions.md
docs/implementations/platonic-sqs-queue/sender/: index.md  permissions.md
docs/implementations/sqs/: index.md
docs/interfaces/: index.md
docs/interfaces/dict/: index.md
docs/interfaces/queue/: index.md  order-preservation.md  receiver.md  sender.md  structure.md
docs/interfaces/queue/custom-types/: casts.md  index.md  inheritance.md  serializations.md
docs/sqs/: queue.md
docs/structures/queue/: delivery-guarantee.md  index.md  receiver.md  sender.md
docs/supplementals/: ddd.md  generic-args.md  index.md  timeouts.md  typecasts.md
docs/supplementals/typecasts/: custom.md  defaults.md  defaults.yaml  index.md
docs/supplementals/typecasts/create/: index.md  lambda.md  parametric.md  register.md
docs/supplementals/typecasts/deduce/: index.md  inheritance.md  transitivity.md
main/: __init__.py  cached_property.py  env.py  md.py  print_class.py  print_dataclass.py
octadocs_python/: get_object_name.py  get_object_path.py
platonic-website/: mkdocs.yml
platonic-website/docs/: ddd.md  index.md
platonic-website/docs/sqs/: queue.md
platonic-website/docs/structures/: index.md  queue.md
platonic-website/docs/structures/queue/: index.md
queries/: children.sparql  python_object.sparql
queries/implementations/: link.sparql  list.sparql
queries/typecasts/: list.sparql
templates/: class.md
