[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"


[tool.nitpick]
style = "https://raw.githubusercontent.com/wemake-services/wemake-python-styleguide/master/styles/nitpick-style-wemake.toml"


[tool.poetry]
name = "platonic-website"
version = "0.1.0"
description = "Documentation website for python-platonic project"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/python-platonic/platonic-website"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
mkdocs = "^1.1.2"
mkdocs-material = "^6.1.0"
mkautodoc = "^0.1.0"
mkdocs-macros-plugin = "^0.5.0"
platonic-sqs = "^1.2.5"
octadocs = "^0.0.30"
pydantic = "^1.8.1"
typeclasses = "^0.2.0"
strictyaml = "^1.3.2"

[tool.poetry.dev-dependencies]
mister-jeeves = "^0.0.3"

# For mypy under Python 3.8
"backports.cached_property" = "^1.0.0"
ipython = "^7.21.0"

[tool.flakehell]
base = "https://raw.githubusercontent.com/Recall-Masters/standards/main/pyproject.toml"


[tool.flakehell.exceptions."main/cached_property.py"]
# In this file we import a function from two different places depending on
# Python version.
wemake-python-styleguide = [
  # Found block variables overlap: {0}
  "-WPS440",

  # Found nested import
  "-WPS433",
]

pyflakes = [
  # %r imported but unused
  "-F401",
]
